# ros2_robot_arm

./: CMakeLists.txt  README.md  package.xml  robot-arm.ci.repos
config/: joint_trajectory_controller.yaml  test_goal_trajectory.yaml
launch/: rsp_gazebo.launch.py  view_tx200.launch.py
meshes/tx200/collision/: arm_link.STL  base_link.STL
meshes/tx200/visual/: elbow_link.STL  forearm_link.STL  shoulder_link.STL  wrist_link.STL
rviz/: tx200.rviz
src/: test_trajectory.cpp
urdf/: common.xacro  tx200.urdf.xacro
urdf/tx200/: tx200_gazebo.xacro  tx200_macro.ros2_control.xacro  tx200_macro.xacro
